fix: cards vertical align

--- a/src/components/ListItems/ListItems.module.css
+++ b/src/components/ListItems/ListItems.module.css
@@ -4,6 +4,7 @@
   padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+  align-content: start;
   gap: 20px;
 }
 
